tests/baselines/reference/generatorTypeCheck17.errors.txt
generatorTypeCheck17.ts(4,5): error TS2322: Type 'undefined' is not assignable to type 'Foo'.


==== generatorTypeCheck17.ts (1 errors) ====
    class Foo { x: number }
    class Bar extends Foo { y: string }
    function* g(): IterableIterator<Foo> {
        yield;
        ~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'Foo'.
        yield new Bar;
    }